chore: fix CSS, trim whitespace

--- a/app/assets/stylesheets/components/courselabel-edit.css.scss
+++ b/app/assets/stylesheets/components/courselabel-edit.css.scss
@@ -5,10 +5,6 @@ d-course-labels-search-bar {
 
   .add-button {
     height: 33.5px;
-    margin-left: -4px; 
-  }
-
-  .input-group {
-    margin-left: -4px;
+    margin-left: -4px !important;
   }
 }
